// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-help > grouping > should display subcommands 1`] = `
[
  [
    "[2mtest[22m [1mparent[22m - Parent command

[4m[1mUsage[22m[24m
  $ test parent [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mSubcommands[22m[24m
  [1mchild1[22m  First child command
  [1mchild2[22m  Second child command",
  ],
  [
    "[2mtest[22m - Parent command

[4m[1mUsage[22m[24m
  $ test [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m",
  ],
]
`;

exports[`plugin-help > grouping > should group command flags 1`] = `
[
  [
    "[2mtest[22m [1mbuild[22m - Build project

[4m[1mUsage[22m[24m
  $ test build [2m[flags][22m

[4m[1mFlags[22m[24m
  [1m--output[22m  [2mString[22m  Output directory
  
  [2mInput Options[22m
    [1m--src[22m    [2mString[22m  Source directory
    [1m--entry[22m  [2mString[22m  Entry file

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m",
  ],
]
`;

exports[`plugin-help > grouping > should group commands 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m   Show help
  [1mother[22m  Other command
  
  [2mCore Commands[22m
    [1minit[22m   Initialize project
    [1mbuild[22m  Build project
  
  [2mUtility Commands[22m
    [1mclean[22m  Clean build artifacts

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > grouping > should group global flags 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help         [2m[default: [1mfalse[22m[2m][22m
  [1m--config[22m    [2mString[22m   Config file path
  
  [2mOutput Options[22m
    [1m--verbose, -v[22m  [2mBoolean[22m  Enable verbose output
    [1m--quiet, -q[22m    [2mBoolean[22m  Suppress output

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > grouping > should not add group headers when no groups defined 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m   Show help
  [1minit[22m   Initialize project
  [1mbuild[22m  Build project

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should format custom flag default with "display" property 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help                   [2m[default: [1mfalse[22m[2m][22m
  [1m--custom[22m    [2mString[22m   A flag with custom default  [2m[default: [1mcustom-default[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should format custom flag type with "display" property 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m      Show help                [2m[default: [1mfalse[22m[2m][22m
  [1m--custom[22m    [2mcustom-type[22m  A flag with custom type

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should not show commands placeholder when no commands exist 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mExamples[22m[24m
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should not show commands placeholder when only registered root command 1`] = `
[
  [
    "[2mtest[22m

[4m[1mUsage[22m[24m
  $ test [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m",
  ],
]
`;

exports[`plugin-help > should not show commands which set \`show\` to false 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should show --help 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should show available subcommands when parent command does not exist (using --help) 1`] = `
[
  [
    "test [1mcompletions[22m not found

[4m[1mAvailable Subcommands[22m[24m
  [1minstall[22m    Install shell completions
  [1muninstall[22m  Uninstall shell completions",
  ],
]
`;

exports[`plugin-help > should show available subcommands when parent command does not exist 1`] = `
[
  [
    "test [1mcompletions[22m not found

[4m[1mAvailable Subcommands[22m[24m
  [1minstall[22m    Install shell completions
  [1muninstall[22m  Uninstall shell completions",
  ],
]
`;

exports[`plugin-help > should show help 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should show help when no command 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should show parameter description 1`] = `
[
  [
    "[2mtest[22m [1mtest[22m - Test command

[4m[1mUsage[22m[24m
  $ test test <param> [2m[flags][22m

[4m[1mParameters[22m[24m
  [1m<param>[22m  [2mstring[22m  Description for param

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m",
  ],
]
`;

exports[`plugin-help > should show parameter types 1`] = `
[
  [
    "[2mtest[22m [1mtest[22m - Test command

[4m[1mUsage[22m[24m
  $ test test <param> <param2> [range] [regex] -- [2m[flags][22m

[4m[1mParameters[22m[24m
  [1m<param>[22m   [2mstring[22m
  [1m<param2>[22m  [2ma | b | c[22m
  [1m[range][22m   [2m1 - 10[22m
  [1m[regex][22m   [2mRegex: /^\\d+$/[22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m",
  ],
]
`;

exports[`plugin-help > should support flag shorthand 1`] = `
[
  [
    "[2mtest[22m [1mtest[22m - Test command

[4m[1mUsage[22m[24m
  $ test test [2m[flags][22m

[4m[1mFlags[22m[24m
  [1m--verbose[22m  [2mBoolean[22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m",
  ],
]
`;

exports[`plugin-help > should support no description 1`] = `
[
  [
    "[2mtest[22m [1mtest[22m

[4m[1mUsage[22m[24m
  $ test test <param> [2m[flags][22m

[4m[1mParameters[22m[24m
  [1m<param>[22m  [2mstring[22m

[4m[1mFlags[22m[24m
  [1m--flag[22m  [2mBoolean[22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m
  [1m--global[22m    [2mBoolean[22m",
  ],
]
`;

exports[`plugin-help > should support optional description for command 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help
  [1mtest[22m

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should support optional description for global flag 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m<command>[22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help              [2m[default: [1mfalse[22m[2m][22m
  [1m--verbose[22m   [2mBoolean[22m  Enable verbose output

[4m[1mCommands[22m[24m
  [1mhelp[22m  Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should use [] as placeholder when root command exists 1`] = `
[
  [
    "[1mtest[22m v0.0.0 - test

[4m[1mUsage[22m[24m
  $ test [2m[command][22m [2m[flags][22m

[4m[1mGlobal Flags[22m[24m
  [1m--help, -h[22m  [2mBoolean[22m  Show help  [2m[default: [1mfalse[22m[2m][22m

[4m[1mCommands[22m[24m
  [1m(root)[22m  Root command
  [1mhelp[22m    Show help

[4m[1mExamples[22m[24m
  $ test help              -  Show help
  $ test help <command>    -  Show help for a specific command
  $ test <command> --help  -  Show help for a specific command

[4m[1mNotes[22m[24m
  If no command is specified, show help for the CLI.
  If a command is specified, show help for the command.
  -h is an alias for --help.",
  ],
]
`;

exports[`plugin-help > should work with friendly-error 1`] = `
[
  [
    "No such command: "not-exist".",
  ],
]
`;
